--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="theme-color" content="#1E052D" />
+  <meta name="description" content="Timerlab | A simple and customizable timer" />
+  <meta property="og:title" content="A simple and customizable timer">
+  <meta property="og:description" content="Timerlab is a simple and customizable timer">
+  <meta property="og:site_name" content="Timerlab">
+  <meta property="og:image" content="%PUBLIC_URL%/timerlab.png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap"
     rel="stylesheet">
